crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@if_condition_is_boolean_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/if_condition_is_boolean_fail.tapir
---
Error: Condition in if statement must be a bool, but got a int
   ╭─[if_condition_is_boolean_fail.tapir:1:1]
   │
 1 │ if 3 {
   │    ┬  
   │    ╰── This has type int
───╯
Error: Condition in if statement must be a bool, but got a fix
   ╭─[if_condition_is_boolean_fail.tapir:1:1]
   │
 6 │ if x {}
   │    ┬  
   │    ╰── This has type fix
───╯
